html changes done

--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
                     </style>
                     <div class="position-relative overflow-hidden mb-2">
                         <a href="https://github.com/shubhamraut789">
-                            <img class="img-fluid rounded w-100 project-img" src="img/project-1.jpg" alt="">
+                            <img class="img-fluid rounded w-100 project-img" src="img/Project-1.jpg" alt="">
                         </a>
                         <div class="bg-primary d-flex align-items-center justify-content-center">
                             <a href="img/project-1.jpg" data-lightbox="portfolio">
