medium link added correcctly

--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
                 </div>                
                 <div class="col-lg-4 col-md-6 mb-4 portfolio-item third">
                     <div class="position-relative overflow-hidden mb-2">
-                        <a href="https://medium.com/shubhamraut789">
+                        <a href="https://medium.com/@shubhamraut789">
                             <img class="img-fluid rounded w-100 project-img" src="img/project-3.jpg" alt="">
                         </a>
                         <div class="bg-primary d-flex align-items-center justify-content-center">
